# vembed-factory

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_zh-CN.md  check_dataloader_improvements.py  docker-compose.yaml  environment.yaml  mkdocs.yml  pyproject.toml  pytest.ini  pytest_output.txt  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
benchmark/: __init__.py  compare_flickr30k_before_after.sh  compare_reports.py  compare_sop_before_after.sh  dataset.py  evaluate_dense.py  generate_embeddings.py  metrics.py  model_wrapper.py  run.py  run_benchmark.sh
benchmark/bench_datasets/: __init__.py  flickr30k.py  jsonl.py  registry.py  sop.py
benchmark/utils/: mrl.py
configs/: accelerate_fsdp.yaml  bge_m3.yaml  clip.yaml  custom.yaml  defaults.yaml  dinov2_bert.yaml  qwen.yaml  qwen3.yaml  qwen3_8b.yaml  siglip.yaml  vit_minilm.yaml
docs/: CONTRIBUTING.md  DATA_LOADING_GUIDE.md  README_zh-CN.md  index.md  mkdocs.yml  structure.md
docs/api/: API_DOCUMENTATION_TEMPLATE.md  cli.md  config.md  entrypoints.md  grad_cache.md  hparams.md  inference.md
docs/guides/: 01_clip_text_to_image_zh.md  02_qwen3_multimodal_retrieval_zh.md  03_ecommerce_search_system_zh.md  04_parameter_efficient_tuning_zh.md  05_distributed_training_zh.md  06_colpali_document_retrieval_zh.md  07_knowledge_distillation_zh.md  08_troubleshooting_optimization_zh.md  README.md  colbert_configuration.md  configuration.md  data-preparation.md  dinov2_finetune.md  dinov2_finetune_zh.md  distributed-training.md  fsdp-training.md  getting-started.md  hard_negative_mining.md  lora-finetuning.md  python-api.md
examples/: _common.sh  bert_t2t.yaml  bge_t2t.yaml  clip_cosent.yaml  clip_distillation.yaml  clip_train.yaml  clip_triplet.yaml  dinov2_bert_train.yaml  dinov2_colbert.yaml  dinov2_colbert_small_val.yaml  dinov2_i2i.yaml  dinov3_i2i.yaml  gpu_memory_monitor.sh  infonce_with_hard_mining.yaml  mae_i2i.yaml  prepare_data.py  prepare_sop_data.py  quick_start.py  qwen3_2b_train.yaml  qwen3_8b_fsdp.yaml  qwen3_8b_train.yaml  qwen3_embedding_train.yaml  qwen3_vl_embedding_2b_train.yaml  qwen3_vl_embedding_8b_fsdp.yaml  qwen3_vl_embedding_8b_train.yaml  qwen3_vl_embedding_hard_negative.yaml  qwen3_vl_embedding_in_batch_hard.yaml  qwen_colbert.yaml  qwen_m2i.yaml  qwen_m2t.yaml  run_all.sh  run_bert_t2t.sh  run_bge_t2t.sh  run_clip.sh  run_clip_cosent.sh  run_clip_triplet.sh  run_dinov2_bert.sh  run_dinov2_colbert.sh  run_dinov2_i2i.sh  run_dinov3_i2i.sh  (+13 more)
examples/dummy_data/: train.jsonl
notebooks/: 01_setup_and_data.ipynb  02_train_clip_mrl.ipynb  03_knowledge_distillation.ipynb  04_train_vlm_qwen.ipynb  05_sop_i2i_tutorial.ipynb  knowledge_distillation.ipynb  train_clip_mrl.ipynb  train_vlm_qwen.ipynb
scripts/: download_dinov3.py  generate_readme_assets.py  qwen3_vl_embedding.py  setup_env.sh  verify_grad_cache_distributed.py  verify_grad_cache_numerical.py
tests/: README.md  TESTING.md  conftest.py  run_tests.sh
tests/inference/: dinov3_inference.py  qwen3_embedding_inference.py  qwen3_emebdding_inference.py  siglip_inference.py
tests/integration/: compare_qwen3_forward.py  debug_comparison_v4.py  qwen3_vl_embedding_example.py  test_e2e_training.py
tests/unit/: test_bidirectional_loss.py  test_collator_dual.py  test_config.py  test_data_pipeline.py  test_dataset.py  test_debug_processor_patch.py  test_encoders_factory.py  test_factory.py  test_grad_cache.py  test_grad_cache_distributed.py  test_hard_negative.py  test_import.py  test_infonce_extended.py  test_losses.py  test_losses_extended.py  test_metrics.py  test_model_builder.py  test_model_composed.py  test_model_wrapper.py  (+2 more)
vembed/: __init__.py  cli.py  config.py  hparams.py  inference.py  trainer.py
(+98 files in other folders)
